[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Tuile.gd" type="Script" id=1]
[ext_resource path="res://scripts/ButtonRotation.gd" type="Script" id=2]
[ext_resource path="res://scripts/ButtonValiderTuile.gd" type="Script" id=3]
[ext_resource path="res://scene/ButtonValiderMeeple.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 172, 127 )

[node name="Node2D" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="ButtonRotation" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.0
margin_top = -10.0
margin_right = 31.0
margin_bottom = 10.0
text = "rotation"
script = ExtResource( 2 )

[node name="ButtonValiderTuile" type="Button" parent="."]
margin_left = -31.0
margin_top = -10.0
margin_right = -19.0
margin_bottom = 10.0
text = "Valider Tuile"
script = ExtResource( 3 )

[node name="ButtonValiderMeeple" type="Button" parent="."]
margin_left = -30.0
margin_top = 11.0
margin_right = 27.0
margin_bottom = 31.0
text = "Valider Meeple"
script = ExtResource( 4 )

[connection signal="input_event" from="Area2D" to="Area2D" method="_on_Area2D_input_event"]
[connection signal="pressed" from="ButtonRotation" to="ButtonRotation" method="_on_Button_pressed"]
[connection signal="pressed" from="ButtonValiderTuile" to="ButtonValiderTuile" method="_on_ButtonValider_pressed"]
[connection signal="pressed" from="ButtonValiderMeeple" to="ButtonValiderMeeple" method="_on_ButtonValiderMeeple_pressed"]
